# prefect-deployment

./: README.md  debug_local_main.py  debug_prefect_main.py  docker-compose.yml  pyproject.toml
kubernetes/: prefect-server.yml  prefect-service.yml  prefect-worker.yml
pipeline_setup/flows/: example_flow.py
pipeline_setup/parameters/: example_flow_parameters.py
pipeline_setup/tasks/: example_task.py
prefect_server/: Dockerfile
prefect_worker/: Dockerfile
